--- a/mentor_me-ui/src/components/Login.css
+++ b/mentor_me-ui/src/components/Login.css
@@ -12,6 +12,14 @@ body {
   gap: 150px;
 }
 
+input {
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
+  font-size: larger;
+  font-weight: 500;
+}
+
 .btn-success {
   background-color: rgb(37, 83, 61);
   width: 100%;
@@ -34,4 +42,8 @@ form {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+}
+
+.text-danger {
+  color: red;
 }
