--- a/mentor_me-ui/src/components/Header.css
+++ b/mentor_me-ui/src/components/Header.css
@@ -1,29 +1,10 @@
 .header-content {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 10%;
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
-  padding: 10px;
+  padding: 0 100px 40px 100px;
   background-color: rgba(13, 70, 13, 0.401);
-  z-index: 999;
-}
-
-.profile {
-  display: flex;
-  align-items: center;
-}
-
-.profile-picture {
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
-}
-
-.logo img {
-  width: 100px;
-  height: 50px;
+  max-width: 1000px;
+  width: 1000px;
+  height: 80px;
 }
