--- a/mentor_me-ui/src/components/Home.css
+++ b/mentor_me-ui/src/components/Home.css
@@ -1,8 +1,14 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  margin-right: 120px;
+
+  margin-right: 0px;
+  margin-left: 0px;
   padding: 0;
   text-align: center;
   border-top: 0;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
 }
