--- a/mentor_me-ui/src/components/ProfileSection.css
+++ b/mentor_me-ui/src/components/ProfileSection.css
@@ -1,33 +1,50 @@
 .profile-section {
-  margin: 20px;
+  height: max-content;
 }
 
-.profile-section h2 {
-  margin-bottom: 10px;
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
-.profile-section form {
-  display: grid;
-  grid-gap: 15px;
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
-.profile-section label {
+label {
   font-weight: bold;
 }
 
-.profile-section input,
-.profile-section textarea {
-  width: 100%;
-  padding: 5px;
+input,
+textarea {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  resize: vertical;
+  width: 700px;
 }
 
-.profile-section button {
-  margin-top: 10px;
-  padding: 10px 0 10px;
-  background-color: rgba(13, 70, 13, 0.401);
+button[type="submit"] {
+  padding: 10px;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 4px;
-  font-size: larger;
-  font-weight: 600;
+  cursor: pointer;
+  font-size: 16px;
+  width: 200px;
+  margin-bottom: 50px;
+  margin-left: auto;
+}
+
+button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+button[type="submit"]:focus {
+  outline: none;
 }
