--- a/mentor_me-ui/src/components/ProfileSection.css
+++ b/mentor_me-ui/src/components/ProfileSection.css
@@ -48,3 +48,23 @@ button[type="submit"]:hover {
 button[type="submit"]:focus {
   outline: none;
 }
+
+.dropdown-menu {
+  position: absolute;
+  z-index: 1;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 0;
+  margin-top: 5px;
+  list-style-type: none;
+}
+
+.dropdown-menu li {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+.dropdown-menu li:hover {
+  background-color: #80ca83;
+}
