--- a/mentor_me-ui/src/components/MenteeGrid.css
+++ b/mentor_me-ui/src/components/MenteeGrid.css
@@ -1,9 +1,11 @@
 .mentee-grid {
   display: grid;
-  grid-template-columns: 200px 200px 200px;
-  grid-auto-rows: 200px;
-  margin: 0 auto;
+  grid-template-columns: 250px 250px 250px;
+  grid-auto-rows: 250px;
+  margin-top: 80px;
+  margin-right: 80px;
+  margin-left: 140px;
   align-items: center;
   justify-content: center;
-  gap: 3px;
+  gap: 80px;
 }
