--- a/mentor_me-ui/src/components/Login.css
+++ b/mentor_me-ui/src/components/Login.css
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 30px;
+  width: 100%;
+  background-color: white;
+  background: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
 }
 body {
   background: rgba(8, 154, 115, 0.643);
@@ -46,4 +52,41 @@ form {
 
 .text-danger {
   color: red;
+}
+
+.wrapper {
+  display: flex;
+  width: 1000px;
+  height: 95%;
+  box-sizing: border-box;
+  margin: auto;
+}
+
+.image-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.content,
+.image-container {
+  width: 50%;
+  height: 100%;
+}
+
+.welcome-text {
+  font-weight: bold;
+  font-size: 50px;
+  animation: slideDown 1s ease-out forwards;
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
