--- a/mentor_me-ui/src/components/Sidebar.css
+++ b/mentor_me-ui/src/components/Sidebar.css
@@ -1,4 +1,16 @@
-.sidebar {
+.mentor-sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  background-color: #f0f0f0;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.mentee-sidebar {
   display: flex;
   flex-direction: column;
   align-items: center;
