--- a/mentor_me-ui/src/components/Notifications.css
+++ b/mentor_me-ui/src/components/Notifications.css
@@ -1,3 +1,47 @@
 .notifications-content {
+  max-width: 600px;
+  margin: 40px auto;
   padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.notifications-content h3 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
+  text-align: center;
+  border-bottom: 2px solid #e0e0e0;
+  padding-bottom: 10px;
+}
+
+.notifications-content p {
+  background-color: #b8dfcd;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  cursor: pointer;
+}
+
+.notifications-content p:last-child {
+  margin-bottom: 0;
+}
+
+.notifications-content p:first-child:before {
+  display: none;
+}
+
+.notifications-content p:hover {
+  opacity: 0.5;
+}
+
+.notifications-content p.read-notification {
+  background-color: grey;
 }
