--- a/mentor_me-ui/src/components/Sidebar.css
+++ b/mentor_me-ui/src/components/Sidebar.css
@@ -1,19 +1,9 @@
-.mentor-sidebar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 16px;
-  background-color: #f0f0f0;
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-}
-
+.mentor-sidebar,
 .mentee-sidebar {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 16px;
   background-color: #f0f0f0;
   position: fixed;
@@ -32,6 +22,13 @@
   cursor: pointer;
   display: flex;
   border-top: 40px;
+  transition: transform 0.3s, background-color 0.3s;
+  border: none;
+}
+
+.sidebar-button:hover {
+  background-color: #ca8b3e;
+  transform: scale(1.15);
 }
 
 .notifications-popup {
